--- a/RTVCommand/packages.config
+++ b/RTVCommand/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net461" />
+  <package id="TaskScheduler" version="2.8.6" targetFramework="net461" />
 </packages>
